--- a/module1/ex1.1/basic-ts-api-boilerplate/package.json
+++ b/module1/ex1.1/basic-ts-api-boilerplate/package.json
@@ -11,7 +11,8 @@
     "start": "node build/bin/www"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/debug": "^4.1.12",
